Get more things working

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="/-/live-reload.js"></script>
-  <link rel="stylesheet" href="styles.css">
   <title>Document</title>
 </head>
 <body>
-  <div id="example"></div>
+  <div class="main"></div>
   <script src="main.js"></script>
 </body>
 </html>
