--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="/-/live-reload.js"></script>
   <title>Document</title>
 </head>
 <body>
   <div class="main"></div>
-  <script src="main.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
