--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,3 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Document</title>
-</head>
-<body>
-  <script src="bundle.js"></script>
-</body>
-</html>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<script src="http://localhost:2233/bundle.js"></script>
